CSS/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --primary-bg: #111111;
    --secondary-bg: #1A1A1A;
    --accent: #00D26A;
    --accent-hover: #00B85C;
    --text-main: #111111;
    --text-secondary: #ffffff;
    --border-color: #2D2D2D;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Arial', sans-serif;
    color: #333;
    background: var(--secondary-bg);
    color: var(--text-secondary);
    padding-top: 80px;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
    background: var(--primary-bg);
    z-index: 1000;
    color: var(--text-secondary);
    border-bottom: 1px solid var(--border-color);
}

.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: var(--secondary-bg);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 25px;
  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
  z-index: 1000;
}

.navbar nav a {
  margin: 0 10px;
  text-decoration: none;
  color: var(--text-secondary);
}

.logo-section {
    display: flex;
    align-items: left;
    gap: 10px;
}

.logo {
    width: 50px;
    height: auto;
}

.logo-section h3 {
    margin: 0;
    font-size: 24px;
}

.download-btn {
    display: inline-block;
    padding: 15px 35px;
    background: white;
    color: var(--text-main);
    text-decoration: none;
    border-radius: 50px;
    transition: 0.3s;
}

@media (max-width: 768px) {
    .navbar {
        flex-wrap: wrap;
        text-align: center;
        padding: 10px 20px;
    }

    .logo {
        width: 40px;
    }

    .logo-section h3 {
        font-size: 18px;
    }

    .download-btn {
        padding: 8px 15px;
        font-size: 14px;
    }

    .nav a {
        width: 100%;
        justify-content: center;
        flex-wrap: wrap;
        row-gap: 10px;
        margin-top: 10px;
    }
}

nav a {
    z-index: 1000;
    color: var(--text-secondary);
    transition: 0.3s;
    justify-content: space-between;
    align-items: center;
    gap: 15px
}

nav a:hover {
    color: var(--accent);
    text-decoration: underline;
}

nav a::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: -4px;
    width: 0;
    height: 2px;
    background: currentColor;
    transition: width 0.3s ease;
}

section {
    padding: 100px 10%;
    background: var(--primary-bg);
    color: var(--text-secondary);
}

.alt-section {
    background: var(--secondary-bg);
    color: var(--text-secondary);
}

p {
    color: var(--text-main);
}

.btn {
    background: var(--accent);
    color: var(--text-main);
    padding: 14px 28px;
    border-radius: 8px;
    text-decoration: none;
    transition: 0.3s;
}

.btn:hover {
    background: var(--accent-hover);
}

h1,h2,h3 {
    margin-bottom: 20px;
}

h2 {
    text-align: center;
    font-size: 2.5em;
    margin-bottom: 50px;
    color: var(--text-main);
}

h3 {
    color: var(--text-secondary);
}

#home {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    background: var(--primary-bg);
    color: var(--text-main);
}

#home h1 {
    font-size: 4rem;
    max-width: 900px;
    color: var(--text-secondary);
}

#home p {
    font-size: 1.2rem;
    margin: 20px 0;
    color: var(--text-secondary);
}

#home a {
     display: inline-block;
    padding: 5px 10px;
    background: transparent;
    color: lightseagreen;
    text-decoration: none;
    border-radius: 25px;
    transition: 0.3s;
    color: rgb(28, 202, 129);
    animation: bounce 2s ease infinite;
}

@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0);
    }

    40% {
        transform: translateY(-15px);
    }

    60% {
        transform: translateY(-8px);
    }
}

#home a:hover {
    transform: translateY(-3px);
}

#how-it-works {
    background: #fff;
    color: var(--text-main)
}

#how-it-works h2 {
    color: var(--text-main);
    padding: 0;
    gap: 0;
}

#how-it-works p {
    color: var(--text-main);
    padding: 20px;
}

.steps {
    align-items: flex-start;
    background: #f8f8f8fa;
    padding: 30px;
    border-radius: 15px;
    margin-bottom: 20px;
    text-align: center;
    color: var(--text-main);
}

body {
    counter-reset: section;
}

.step-heading {
    counter-increment: section;
    position: relative;
    padding-left: 50px;
    margin: 20px 0;
}

.step-heading::before {
    content: counter(section);

    position: absolute;
    left: 0;
    top: 50%;
    transform: translateY(-50%);

    width: 35px;
    height: 35px;
    border-radius: 50%;
    border: 2px solid black;

    display: flex;
    align-items: center;
    justify-content: center;

    font-weight: bold;
    font-size: 14px;

    background: black;
    color: white;
}

.steps h3 {
    align-items: center;
    text-align: left;
    color: var(--text-main);
}

.steps p {
    align-items: center;
    text-align: left;
    color: var(--text-main);
    margin: 0;
    margin-left: 0;
}

#features {
    background: var(--secondary-bg);
    color: var(--text-secondary);
}

#features h2, p {
    color: var(--text-secondary)
}

.feature {
    background: var(--secondary-bg);
    padding: 24px;
    border-radius: 12px;
    margin-bottom: 20px;
    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
    transition: 0.3s;
    border: 1px solid var(--border-color);
}

.features h3 {
    margin: 0;
}

.feature-card-1 {
    flex-direction: column;
    border: 2px solid black;
    padding: 10px;
    border-radius: 10px;
    margin: 20px 0;
    align-items: center;
    text-align: center;
    gap: 8px;
}

.feature:hover {
    transform: translateY(-5px);
}

#builders {
    background-color: whitesmoke;
}

#builders h2 {
    color: var(--text-main);
}

#builders p {
    color: var(--text-main)
}

#builders a {
    display: inline-block;
    margin-top: 20px;
    padding: 15px 25px;
    background: #0077FF;
    color: #fff;
    text-decoration: none;
    border-radius: 50px;
    color: var(--text-main);
    gap: 10px
}

#reviews {
    background: #f5f7fa;
    color: var(--text-main);
    text-align: center;
}

.content-slider {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
    text-align: center;
    margin: 25px 0;
}

.text {
    max-width: 400px;
}

.arrow {
    font-size: 30px;
    background: none;
    border: none;
    cursor: pointer;
}

#reviews h3 {
    color: var(--text-main);
    text-align: center;
    padding: 15px;
}

#reviews p {
    text-align: center;
    color: var(--text-main);
    padding: 0;
}

.reviews {
    background: #fff;
    padding: 15px;
    border-radius: 15px;
    margin-bottom: 20px;
    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
    color: var(--text-main);   
}

.material-symbols-outlined {
    padding: 15px;
}

#reviews a {
    display: inline-block;
    margin-top: 20px;
    padding: 15px 35px;
    background: #0077FF;
    color: #fff;
    text-decoration: none;
    border-radius: 50px;
    color: var(--text-main)
}

#review {
    display: inline-block;
    margin-top: 10px;
    padding: 10px 20px;
    background: lightseagreen;
    color: #fff;
    text-decoration: none;
    border-radius: 50px;
    color: var(--text-main)
}

#review a {
    display: inline-block;
    margin-top: 20px;
    padding: 15px 35px;
    background: black;
    text-decoration: none;
    border-radius: 50px;
    color: var(--text-secondary)
}

#review h2 {
    text-align: left;
}

#review p {
    text-align: left;
    color: var(--text-main)
}

#cta p {
    color: var(--text-secondary);
}

#cta img {
    width: 180px;
    height: auto;
}

@media (max-width: 480px) {
    .cta img {
        width: 90px;
    }
}

.footer {
    background: #111;
    color: var(--text-secondary);
    text-align: center;
    padding: 15px;
    margin: 0;
}

.footer-brand {
   display: flex;
    gap: 5px;
    align-items: center;
    justify-content: flex-start;
    max-width: 1000px;
    margin: 0 auto;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
    text-align: left;
    font: 12px;
    padding-left: 0;
}

.footer-logo {
    width: 50px;
    height: auto;
    margin-right: 10px;
}

.footer-brand h3{
    margin: 0;
    font-size: 24px;
}

.footer-tagline {
    text-align: left;
    max-width: 1200px;
    margin: 10px auto 30px;
    color: var(--text-secondary);
}

.footer-nav {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 15px;
    margin-bottom: 30px;
    color: var(--text-secondary);
    
}

.footer-nav a{
    color: #fff;
    text-decoration: none;
    font-size: 14px;
    transition: 0.3s;
    margin: 5px;
    padding: 5px;
    text-align: left;
}

.footer-nav a:hover {
    color: #00B85C;
}

.footer-icons {
    display: flex;
    justify-content: left;
    gap: 5px;
    margin-bottom: 15px;
    text-align: left;
}

.footer-icons img {
    width: 35px;
    height: 35px;
    transition: 0.3s;
}

.footer-icons img:hover{
    transform: translateY(-3px);
}

.copyright {
    font-size: 14px;
    text-align: center;
}

footer p {
    color: var(--text-secondary)
}

@media(max-width: 768px) {
    nav {
        flex-wrap: wrap;
        gap: 15px; 
        }
    

    section {
        padding: 80px 5%;
    }

    #home h1 {
        font-size: 2.5rem;
    }

    h2 {
        font-size: 2rem;
    }
}

.hero-image {
    width: 100%;
    max-width: 700px;
    height: auto;
    display: block;
    border-radius: 20px;
    margin: 0 auto;
    object-fit: cover;
}

.app-image {
    width: 100%;
    max-width: 500px;
    display: block;
    height: auto;
    border-radius: 20px;
    box-shadow: 0 15px 40px rgba(0,0,0,0.12);
    transition: transform 0.3s ease;
    object-fit: cover;
}

.app-image:hover {
    transform: translateY(-8px);
}

.feature-img {
    width: 80px;
    height: 80px;
    object-fit: contain;
    margin-bottom: 20px;
}

.builder-img {
    width: 100%;
    height: 120px;
    border-radius: 50%;
    object-fit: cover;
}

.review-img {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    object-fit: cover;
}

.image-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: 30px;
}

.image-grid img {
    width: 100%;
    height: 250px;
    object-fit: cover;
    border-radius: 18px;
}

.mockup-image {
    width: 100%;
    max-width: 600px;
    animation: float 4s ease-in-out infinite;
}

@keyframes float {
    0%, 100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-15px);
    }
}

img {
    box-shadow: 0 10px 30px rgba(0,0,0,0.08);
}

.material-symbols-outlined {
  font-family: 'Material Symbols Outlined';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-transform: none;
  letter-spacing: normal;
  white-space: nowrap;
  direction: ltr;

  font-variation-settings:
    'FILL' 0,
    'wght' 400,
    'GRAD' 0,
    'opsz' 24;
}

